--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -641,7 +641,7 @@ ar\section{Special Functions}
         I(\alpha,\,\beta)&\geq\int_0^1\frac{(1-x)^\beta}{x}\,dx\\
         &\geq\int_0^1\frac{(1-x)^n}{x}\,dx\\
         &=\int_0^1\sum_{k=0}^n\binom{n}{k}(-1)^kx^{k-1}\,dx\\
-        &=\sum_{k=1}^n\binom{n}{k}(-1)^k\int_0^1x^{k-1}\,dx+\int_0^1\frac{1}{x}\,dx\\
+        &=\sum_{k=1}^n\binom{n}{k}(-1)^k\int_0^1x^{k-1}\,dx+\int_0^1\frac{1}{x}\,dx\\q
         &=\sum_{k=1}^n\binom{n}{k}\frac{(-1)^k}{k}+[\log x]_0^1\\
         &=\infty
     \end{align*}
