--- a/svmono.cls
+++ b/svmono.cls
@@ -1858,7 +1858,7 @@ to\z@{\kern0.55\wd0\vrule\@height0.45\ht0\hss}\box0}}}}
     \vskip 1.5em               % Vertical space after date.
   \fi
  \vfill
- {\Large\ttfamily Seoul National University \par}
+ {\Large\ttfamily Seoul National University\\ Department of Mathematics \& Statistics \par}
 %\vskip 5\p@
 %\large
 %  Berlin\enspace Heidelberg\enspace New\kern0.1em York\\
