--- a/MathematicalStatistics.tex
+++ b/MathematicalStatistics.tex
@@ -116,15 +116,15 @@
 
 \input{Preliminary.tex}
 
-% \part{Probability and Measure}
+\part{Probability and Measure}
 
-% \chapter{Measure Theory}
+\chapter{Measure Theory}
 
-% \input{MeasureTheory.tex}
+\input{MeasureTheory.tex}
 
-% \chapter{Probability Theory}
+\chapter{Probability Theory}
 
-% \input{ProbabilityTheory.tex}
+\input{ProbabilityTheory.tex}
 
 % \part{Distributions}
 
